--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,8 @@ dependencies:
   # Icons
   cupertino_icons: ^1.0.8
   flutter_svg: ^2.2.0
+  connectivity_plus: ^6.1.5
+  internet_connection_checker: ^3.0.1
 
 dev_dependencies:
   flutter_test:
