Add phone call functionality and update contact methods in ContactScreen
- Added CALL_PHONE permission in AndroidManifest.xml for phone call capabilities.
- Updated Info.plist to include phone usage description and supported URL schemes for Telegram, WhatsApp, and email.
- Refactored contact methods in ContactScreen to utilize url_launcher for making phone calls, opening Telegram, WhatsApp, and sending emails, with error handling for each action.
- Corrected company Telegram handle in app_constants.dart for consistency.

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -45,5 +45,14 @@
 	<true/>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
+	<key>NSPhoneUsageDescription</key>
+	<string>Bu ilova mijozlar bilan bog'lanish uchun telefon qo'ng'iroqlarini amalga oshirish imkoniyatini talab qiladi.</string>
+	<key>LSApplicationQueriesSchemes</key>
+	<array>
+		<string>telegram</string>
+		<string>whatsapp</string>
+		<string>mailto</string>
+		<string>tel</string>
+	</array>
 </dict>
 </plist>
